cargo-features = ["strip"]

[package]
name = "WordleCheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"

# Paralell processing library
rayon = "1.5.1"

# Progress bars
indicatif = { version = "0.16.2", features = ["rayon"] }

# Rust does not implement ordered floating point numbers
approx = "0.5.1"
ordered-float = "2.10.0"

# Rust's standard library implementation of a hashmap is cryptographically secure, but also slow
rustc-hash = "1.1.0"

# For caching dictionary words
serde = {version = "1.0.136", features = ["derive"]}
bincode = "1.3.3"

# [dev-dependencies]
# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.

# For perf profiling
# [target.x86_64-unknown-linux-gnu]
# rustflags = ["--no-rosegment"]
